# backend

.github/workflows/: ci.yml  (+1 more)
projects/geugeu/: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  checklist.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.sh
projects/geugeu/.cursor/rules/: korean.mdc  less-code.mdc  project-description.mdc
projects/geugeu/app/: config.py  conftest.py  database.py  dependencies.py  main.py  models.py  utils.py
projects/geugeu/app/api/: dependencies.py  routers.py
projects/geugeu/app/auth/: dependencies.py  deps.py
projects/geugeu/app/core/: config.py  db.py  dependencies.py  security.py
projects/geugeu/app/crud/: auth.py  drawing_comments.py  drawings.py  post_comments.py  posts.py  users.py
projects/geugeu/app/drawing/: conftest.py  dependencies.py  deps.py
projects/geugeu/app/post/: conftest.py  dependencies.py  deps.py
projects/geugeu/app/schemas/: auth.py  drawing_comments.py  drawings.py  interests.py  post_comments.py  posts.py  users.py
projects/geugeu/app/services/: auth.py  drawing_comments.py  drawings.py  interests.py  post_comments.py  posts.py  users.py
projects/geugeu/app/user/: dependencies.py  deps.py
projects/geugeu/docs/: requirements.md
projects/geugeu/migrations/: env.py  script.py.mako
projects/geugeu/migrations/versions/: 2025_03_19_0008-c23bef1b314d_add_user_table.py  2025_03_22_0007-ed216036c836_create.py  2025_03_26_2309-9b811c5af312_add_drawing_tables.py  2025_03_27_0004-feb0359505b0_add_status_field_to_drawing.py  2025_03_30_1338-6eed98d45694_modify_comments.py  (+14 more)
projects/geugeu/prisma/: seed.ts
projects/geugeu/src/: main.ts
projects/geugeu/tests/: conftest.py  test_auth.py  test_drawing_comments.py  test_drawings.py  test_file_upload.py  test_jwt_validation.py  test_post_comments.py  test_posts.py  test_users.py
(+110 files in other folders)
