[project]
name = "geugeu"
version = "0.1.0"
description = "GeuGeu web application server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "nanoid>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
]

[tool.ruff]
exclude = ["migrations"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "testcontainers>=4.10.0",
    "types-nanoid>=2.0.0.20240601",
    "types-passlib>=1.7.7.20250408",
]
